# enclave_inclusion

./: .gitignore  Cargo.toml  README.md  verify.sol
examples/: gen_inclusion_proof.rs  gen_inclusion_verifier.rs  inclusion_proof_solidity_calldata.json  test1.rs
src/: lib.rs  main.rs
src/chips/: merkle_tree.rs  mod.rs
src/chips/range/: tests.rs  utils.rs
src/circuits/: merkle_tree.rs  mod.rs  types.rs  utils.rs  verify.sol
src/csv/: entry_16.csv  entry_16_switched_order.csv
src/merkle_tree/: entry.rs  mod.rs  mt.rs  node.rs  tests.rs  tree.rs
src/merkle_tree/utils/: build_tree.rs  csv_parser.rs  operation_helpers.rs
src/poseidon_native/: mod.rs
src/poseidon_native/hasher/: mod.rs  poseidon_bn254_5x5.rs
